--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-draggable": "^2.2.3",
     "react-hot-loader": "^3.0.0-beta.1",
     "react-measure": "^1.4.2",
+    "react-motion": "^0.4.7",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-ui": "0.0.15",
