--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.6",
+    "markov-clustering": "0.0.4",
     "proxy-middleware": "^0.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
