--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-ui": "0.0.15",
+    "redux-undo": "^1.0.0-beta9-6",
     "request": "^2.79.0",
     "reselect": "^2.5.4",
     "url-loader": "^0.5.7",
