--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.16.0",
     "css-loader": "^0.24.0",
+    "d3": "^4.5.0",
     "del": "^2.2.2",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
@@ -30,6 +31,7 @@
     "fs-extra": "^1.0.0",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
+    "jlouvain": "^2.0.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.6",
     "markov-clustering": "0.0.4",
