new editor version

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "css-loader": "^0.24.0",
     "d3": "^4.5.0",
     "del": "^2.2.2",
+    "draft-js": "^0.10.0",
+    "draft-js-export-html": "^0.5.2",
+    "draftjs-to-html": "^0.7.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "fetch": "^1.1.0",
@@ -36,8 +39,10 @@
     "lodash": "^4.16.6",
     "markov-clustering": "0.0.4",
     "proxy-middleware": "^0.15.0",
+    "raw-loader": "^0.5.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-draft-wysiwyg": "^1.9.1",
     "react-draggable": "^2.2.3",
     "react-hot-loader": "^3.0.0-beta.1",
     "react-measure": "^1.4.2",
@@ -48,6 +53,7 @@
     "redux-undo": "^1.0.0-beta9-6",
     "request": "^2.79.0",
     "reselect": "^2.5.4",
+    "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
